[package]
edition = "2021"
name    = "s3_st7789_start"
version = "0.1.0"

[[bin]]
name = "s3_st7789_start"
path = "./src/bin/main.rs"

[dependencies]
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = { version = "0.7.0", features = ["internal-heap-stats"] }
esp-backtrace = { version = "0.15.1", features = [
  "esp32s3",
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.0.0-beta.0", features = ["esp32s3", "unstable", "psram"] }
esp-println = { version = "0.13.0", features = ["esp32s3", "log-04"] }
log = { version = "0.4.21" }
critical-section = "1.2.0"
embassy-executor = "0.7.0"
embassy-time = { version = "0.4.0", features = ["generic-queue-8"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32s3"] }
heapless = { version = "0.8.0", default-features = false }
static_cell = { version = "2.1.0", features = ["nightly"] }
allocator-api2 = { version = "0.2.0", default-features = false, features = ["alloc"] }
mipidsi = { git = "https://github.com/okhsunrog/mipidsi", rev = "82f97f907c5e5482dae4a1252929eb557d6691d5" }
embassy-embedded-hal = "0.3.0"
embassy-sync = "0.6.2"
embedded-graphics = "0.8.1"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false

[patch.crates-io]
esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "63ed40c3684db6ecbae37eade5cd620061788812" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal", rev = "63ed40c3684db6ecbae37eade5cd620061788812" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal", rev = "63ed40c3684db6ecbae37eade5cd620061788812" }
esp-println = { git = "https://github.com/esp-rs/esp-hal", rev = "63ed40c3684db6ecbae37eade5cd620061788812" }
# esp-wifi = { git = "https://github.com/esp-rs/esp-hal", rev = "63ed40c3684db6ecbae37eade5cd620061788812" }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal", rev = "63ed40c3684db6ecbae37eade5cd620061788812" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "966914f4654f30f13964f90c1e2bd491f1105c6f" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "966914f4654f30f13964f90c1e2bd491f1105c6f" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "966914f4654f30f13964f90c1e2bd491f1105c6f" }
embassy-time-queue-utils = { git = "https://github.com/embassy-rs/embassy", rev = "966914f4654f30f13964f90c1e2bd491f1105c6f" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "966914f4654f30f13964f90c1e2bd491f1105c6f" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "966914f4654f30f13964f90c1e2bd491f1105c6f" }